добавлено:

- В Window API было добавлено 6 новых функций:
    - set_always_top()
    - get_always_top()
    - maximize()
    - minimize()
    - restore()
    - raise()

- Добавлена поддержка шейдеров и их кэширование. Желательно изменить динамический массив на хэш-таблицу для большей производительности.

- Добавлена работа с динамическим массивом.

- Добавлена работа с 2D камерой.

- Добавлен заголовочный файл для получения точного времени и ухода в сон или вызвать задержку выполнения кода.

- В mm ядра добавлены новые функции:
    - mm_get_block_header_size() - Для получения размера заголовка блока в байтах.
    - mm_get_total_allocated_blocks() - Для получения количества выделенных блоков.
    - mm_get_absolute_used_size() - Для получения абсолютного размера используемой памяти (учитываются заголовки блоков по 4*8 или 8*8 байт).

- Добавлен стандартный шейдер в рендерере.

- Архитектура проекта и кода теперь устаканена.

- Добавлена поддержка работы с 2D текстурами.

- Теперь можно сохранять изображения при помощи Image_save.

===


изменено/исправлено:

- Теперь mm ядра выравнивает возвращаемые и используемые указатели по 8 байт для SSE, AVX/2, кэша и чётных адресов блоков. Это важно!

- Мелкие ошибки в коде и опечатки.

- Система сборки обновлена.