@@ -29,6 +29,10 @@
 
 - Теперь можно сохранять изображения при помощи Image_save.
 
+- Добавлено оптимизация работы с буферами. Теперь каждый вызов destroy() у буферов (будь это текстура, вершинный объект, фреймбуфер или подобное), их айди добавляется в специальный стек на уничтожение, и накопившиеся айдишки буферов за кадр, удаляются разом (так производительнее). Механизм называется BufferGC.
+
+- Добавлена новая обязательная функция в рендерер: buffers_flush(). Она вызывается автоматически, в цикле окна. Очищает все буферы на удаление, накопившиеся за кадр.
+
 ===
 
 
